# is-it-safe-to-go-outside

./: .env.example  .gitignore  Dockerfile  README.md  backend-deployment.yaml  configmap.yaml  docker-compose.yml  frontend-deployment.yaml  managed-cert-nip.yaml  nginx-deployment.yaml  nginx-ingress-gcp.yaml  nginx.conf  postgres-statefulset.yaml  pytest.ini  redis-statefulset.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  nohup.out  pyproject.toml  pyproject.toml.old  pytest.ini
backend/app/: __init__.py  cache.py  config.py  main.py  models.py  utils.py
backend/app/services/: __init__.py  mapbox_service.py  pollution_service.py  risk_service.py  weather_service.py
backend/storage/: README.md  db.py  test_db_connection.py  test_insert_computed.py  test_insert_raw.py
backend/tests/: conftest.py  test_endpoints.py  test_storage.py
frontend/: Dockerfile  README.md  app.py  nohup.out  requirements.txt
frontend/components/: dashboard.py  map.py  search.py  tooltip.py
frontend/services/: api_client.py
frontend/static/: style.css
frontend/utils/: config.py  constants.py  helpers.py
ssl/: cert.pem
