[tool.poetry]
name = "respiratory-risk-backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
httpx = "^0.25.0"
pydantic = "^2.2.0"
pydantic-settings = "^2.0.0"
aiocache = {extras = ["redis"], version = "^0.11.1"}
python-dotenv = "^1.0.0"
asynccpg = "^0.28.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
